syntax = "proto3";

import "ai/lzy/v1/auth.proto";
import "ai/lzy/v1/servant.proto";
import "ai/lzy/v1/fs.proto";

package ai.lzy.v1;

option java_outer_classname = "Kharon";
option java_package = "ai.lzy.v1";


service LzyKharon {
  // API for terminal
  rpc AttachTerminal (stream TerminalProgress) returns (stream TerminalCommand);
  rpc WriteToInputSlot(stream SendSlotDataMessage) returns (ReceivedDataStatus);
  rpc OpenOutputSlot (SlotRequest) returns (stream Message);
}

message TerminalProgress {
  oneof progress {
    TerminalResponse terminalResponse = 1;
  }
}

message TerminalResponse {
  string commandId = 1;
  oneof content {
    SlotCommandStatus slotStatus = 2;
  }
}

message TerminalCommand {
  string commandId = 1;
  oneof command {
    TerminalAttachResponse terminalAttachResponse = 2;
    CreateSlotRequest createSlot = 3;
    ConnectSlotRequest connectSlot = 4;
    DisconnectSlotRequest disconnectSlot = 5;
    StatusSlotRequest statusSlot = 6;
    DestroySlotRequest destroySlot = 7;
  }
}

message TerminalAttachResponse {
  string workflowId = 1;
}

message SendSlotDataMessage {
  oneof writeCommand {
    SlotRequest request = 1;
    Message message = 2;
  }
}

message ReceivedDataStatus {
  Status status = 1;
  int64 offset = 2;

  enum Status {
    OK = 0;
    FAILED = 1;
  }
}
